Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/mfg_Invoice_And_Payment__c.object-meta.xml
<CustomObject>
    <label>Invoice And Payment</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice And Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>