Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>mfg_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>