Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>mfg_Balance_Amount__c</fullName>
    <label>Balance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>