Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>mfg_Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice And Payments</relationshipLabel>
    <relationshipName>Invoice_And_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>