Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>mfg_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice And Payments</relationshipLabel>
    <relationshipName>Invoice_And_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>