Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>