Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Payment_Received_Date__c</fullName>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>