Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>mfg_Payment_Reference_Number__c</fullName>
    <label>Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>