Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Payment_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>mfg_Payment_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoice_And_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>