Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Status__c.field-meta.xml
<CustomField>
    <fullName>mfg_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>