Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Charges__c</fullName>
    <label>Total Charges</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>