Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Total_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_with_Tax__c</fullName>
    <label>Total with Tax</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>