Manufactoring/force-app/main/default/objects/mfg_Invoice_And_Payment__c/fields/mfg_Transport_Schedule__c.field-meta.xml
<CustomField>
    <fullName>mfg_Transport_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Schedule</label>
    <referenceTo>mfg_Transport_And_Schedule__c</referenceTo>
    <relationshipLabel>Invoice And Payments</relationshipLabel>
    <relationshipName>Invoice_And_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>